feat: done "about me" section

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <div class="layout-container">
+  <app-about-me></app-about-me>
   <div class="profile-grid">
     <div class="left-column">
       <section class="projects-section">
