--- a/src/app/components/softskills/softskills.html
+++ b/src/app/components/softskills/softskills.html
@@ -1,20 +1,17 @@
-<div class="i3-term window-itself">
-  <div class="i3-bar">configuration.yaml</div>
-  
-  <div class="vim-content">
+<div class="vim-content">
     <div class="line-nums">
-      1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11<br>12<br>13<br>14<br>15<br>16<br>17<br>18<br>19<br>20<br>21<br>22
+      1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11<br>12<br>13<br>14<br>15<br>16<br>17<br>18<br>19<br>20<br>
     </div>
     <pre>
 <span class="key">soft_skills</span>:
   <span class="key">personal</span>:
-    - <span class="val">Обучаемость</span>
-    - <span class="val">Ответственность</span>
-    - <span class="val">Тайм-менеджмент</span>
+    - <span class="val">обучаемость</span>
+    - <span class="val">ответственность</span>
+    - <span class="val">тайм-менеджмент</span>
   <span class="key">teamwork</span>:
-    - <span class="val">Принятие критики</span>
-    - <span class="val">Аргументация мнения</span>
-    - <span class="val">Конструктивная обратная связь</span>
+    - <span class="val">принятие критики</span>
+    - <span class="val">аргументация мнения</span>
+    - <span class="val">конструктивная обратная связь</span>
 
 <span class="key">languages</span>:
   - <span class="key">name</span>: <span class="val">English</span>
@@ -26,8 +23,3 @@
   <span class="key">email</span>: <span class="val">"ma.labin@yandex.ru"</span>
   <span class="key">telegram</span>: <span class="val">"@re_translate"</span>
   <span class="key">github</span>: <span class="val">"MrDvD"</span></pre></div>
-  <div class="vim-footer">
-    <span>-- INSERT --</span>
-    <span>1,1 All</span>
-  </div>
-</div>
