--- a/src/app/components/about-me/about-me.html
+++ b/src/app/components/about-me/about-me.html
@@ -1,15 +1,6 @@
-<nav class="i3-bar">
-  <div class="workspaces">
-    <span class="ws active">1:light</span>
-    <span class="ws">2:dark</span>
-  </div>
-  <div class="status-line">
-    <span class="item">{{ currentTime }}</span>
-  </div>
-</nav>
-
-<div class="bento-container window-wrapper">
+<div class="container window-wrapper">
   <app-peekaboo></app-peekaboo>
-
-  <app-softskills></app-softskills>
+  <app-i3-window windowTitle="configuration.yaml - VIM">
+    <app-softskills></app-softskills>
+  </app-i3-window>
 </div>
