--- a/src/app/components/softskills/softskills.less
+++ b/src/app/components/softskills/softskills.less
@@ -1,56 +1,40 @@
-@import "@styles/i3wm.less";
-
-@bg: #fdfdfd;
-@border: #cccccc;
 @gutter: #f0f0f0;
 @accent-red: #a31515;
 @accent-blue: #0076a8;
 
-.i3-term {
-  font-family: 'JetBrains Mono', 'Fira Code', monospace;
-  background: @bg;
-  max-width: 650px;
-  font-size: 14px;
+:host {
+  font-family: 'monospace', monospace;
+}
+
+.vim-content {
+  display: flex;
   height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-
-  .i3-bar {
-    background: #e0e0e0;
-    padding: 2px 10px;
-    font-size: 12px;
-    font-weight: bold;
-    border-bottom: 1px solid @border;
+  
+  .line-nums, pre {
+    font-size: 14px;
+    line-height: 1.6;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
 
-  .vim-content {
-    display: flex;
-    height: 100%;
+  .line-nums {
+    background: @gutter;
+    color: #999;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: right;
+    min-width: 35px;
+    user-select: none;
+    white-space: pre; 
+  }
+
+  pre {
+    margin: 0;
+    padding-left: 15px;
+    flex-grow: 1;
+    overflow-x: auto;
     
-    .line-nums {
-      background: @gutter;
-      color: #999;
-      padding: 10px 8px;
-      text-align: right;
-      min-width: 30px;
-      user-select: none;
-    }
-
-    pre {
-      margin: 0;
-      padding: 10px;
-      line-height: 1.5;
-      .key { color: @accent-red; }
-      .val { color: @accent-blue; }
-    }
-  }
-
-  .vim-footer {
-    background: #444;
-    color: #fff;
-    padding: 2px 10px;
-    font-size: 11px;
-    display: flex;
-    justify-content: space-between;
+    .key { color: @accent-red; font-weight: bold; }
+    .val { color: @accent-blue; }
   }
 }
