feat: done theme update

--- a/src/app/components/i3-bar/i3-bar.html
+++ b/src/app/components/i3-bar/i3-bar.html
@@ -1,9 +1,16 @@
 <nav class="i3-bar">
   <div class="workspaces">
-    <span class="ws active">1:light</span>
-    <span class="ws">2:dark</span>
+    @for (theme of themes; track theme.name; let i = $index) {
+      <span 
+        class="ws" 
+        [class.active]="theme.active" 
+        (click)="selectTheme(theme)">
+        {{ i + 1 }}:{{ theme.name }}
+      </span>
+    }
   </div>
+  
   <div class="status-line">
-    <span class="item">{{ currentTime }}</span>
+    <span class="item">{{ currentTime() }}</span>
   </div>
 </nav>
