--- a/src/app/components/softskills/softskills.html
+++ b/src/app/components/softskills/softskills.html
@@ -1,8 +1,8 @@
 <div class="vim-content">
-    <div class="line-nums">
-      1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11<br>12<br>13<br>14<br>15<br>16<br>17<br>18<br>19<br>20<br>
-    </div>
-    <pre>
+  <div class="line-nums">
+    1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11<br>12<br>13<br>14<br>15<br>16<br>17<br>18<br>19<br>20<br>
+  </div>
+  <pre>
 <span class="key">soft_skills</span>:
   <span class="key">personal</span>:
     - <span class="val">обучаемость</span>
@@ -22,4 +22,6 @@
 <span class="key">contacts</span>:
   <span class="key">email</span>: <span class="val">"ma.labin@yandex.ru"</span>
   <span class="key">telegram</span>: <span class="val">"@re_translate"</span>
-  <span class="key">github</span>: <span class="val">"MrDvD"</span></pre></div>
+  <span class="key">github</span>: <span class="val">"MrDvD"</span>
+</pre>
+</div>
