--- a/src/app/components/i3-window/i3-window.less
+++ b/src/app/components/i3-window/i3-window.less
@@ -1,18 +1,19 @@
 @import "@styles/i3wm.less";
 
 .i3-bar {
-  background: #e0e0e0;
+  background: var(--bg-1);
   padding: 2px 10px;
   font-size: 12px;
   font-weight: bold;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid var(--border-color);
   font-family: 'monospace', monospace;
+  user-select: none;
 }
 
 .window-itself {
   display: grid;
   grid-template-rows: auto 1fr;
-  border: 1px solid #000000;
-  background: #ffffff;
+  border: 1px solid var(--border-color);
+  background: var(--bg-color);
   height: 100%;
 }
