--- a/src/app/components/i3-bar/i3-bar.less
+++ b/src/app/components/i3-bar/i3-bar.less
@@ -24,7 +24,7 @@
       }
 
       &.active {
-        background-color: var(--primary);
+        background-color: var(--accent);
         color: var(--bg-1);
         cursor: default;
       }
