--- a/src/app/components/i3-window/i3-window.less
+++ b/src/app/components/i3-window/i3-window.less
@@ -1,5 +1,14 @@
 @import "@styles/i3wm.less";
 
+:host {
+  &:hover {
+    .i3-bar {
+      background-color: var(--primary);
+      color: var(--bg-1);
+    }
+  }
+}
+
 .i3-bar {
   background: var(--bg-1);
   padding: 2px 10px;
