--- a/src/app/components/obsidian/obsidian.html
+++ b/src/app/components/obsidian/obsidian.html
@@ -1,6 +1,6 @@
 <div class="profile-grid">
   <div class="left-column">
-    <section class="projects-section">
+    <section class="section">
       <h2 class="section-title"># projects</h2>
       <div class="activity-list">
         <app-activity-info
@@ -25,7 +25,7 @@
         </app-activity-info>
       </div>
     </section>
-    <section class="activity-section">
+    <section class="section">
       <h2 class="section-title"># activity</h2>
       <div class="activity-list">
         <app-activity-info
@@ -41,7 +41,7 @@
   </div>
   
   <div class="right-column">
-    <section class="skills-section">
+    <section class="section">
       <h2 class="section-title"># hard-skills</h2>
       <app-expand-content [maxHeight]='"225px"'>
         <div class="activity-list">
@@ -49,7 +49,7 @@
         </div>
       </app-expand-content>
     </section>
-    <section class="education-section">
+    <section class="section">
       <h2 class="section-title"># education</h2>
       <div class="activity-list">
         <app-activity-info
