refactor: remove unnecessary depedency

--- a/src/app/components/about-me/about-me.html
+++ b/src/app/components/about-me/about-me.html
@@ -1,4 +1,4 @@
-<div class="container window-wrapper">
+<div class="container">
   <app-peekaboo></app-peekaboo>
   <app-i3-window windowTitle="configuration.yaml - VIM">
     <app-softskills></app-softskills>
