--- a/src/app/components/about-me/about-me.less
+++ b/src/app/components/about-me/about-me.less
@@ -1,9 +1,11 @@
-@import "@styles/i3wm.less";
+// @import "@styles/i3wm.less";
 @import "@styles/platforms.less";
 
 .container {
   display: grid;
   grid-template-columns: 0.9fr 2fr;
+  gap: 10px;
+  padding: 10px 0;
 
   @media (max-width: @mobile) { 
     grid-template-columns: 1fr; 
