fix: style encapsulation
now age is not hard-coded

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -11,3 +11,9 @@
   padding-bottom: 2rem;
   transition: background-color 0.3s ease;
 }
+
+@media (max-width: calc(@main_content + 1rem * 4)) {
+  .layout-container {
+    padding: 1rem;
+  }
+}
