--- a/src/app/components/peekaboo/peekaboo.html
+++ b/src/app/components/peekaboo/peekaboo.html
@@ -5,9 +5,9 @@
 
   <app-i3-window windowTitle="about-me.txt - bash" class="flex">
     <div class="info-section">
-      <p>NAME: МАКАР_ЛАБИН</p>
-      <p>STAT: 20 y.o. / 18.11.2005</p>
-      <p>LOC: Saint-Petersburg, RU</p>
+      <p>ИМЯ: МАКАР_ЛАБИН</p>
+      <p>СТАТ: {{ age }} лет / 18.11.2005</p>
+      <p>ГЕО: Санкт-Петербург, RU</p>
     </div>
   </app-i3-window>
 </div>
