feat: fetching content from external api

--- a/src/app/components/about-me/about-me.html
+++ b/src/app/components/about-me/about-me.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-peekaboo></app-peekaboo>
   <app-i3-window windowTitle="configuration.yaml - VIM">
-    <app-vim-editor [rawContent]="codeSnippet"></app-vim-editor>
+    <app-vim-editor [treeData]="(softskills$ | async) ?? []"></app-vim-editor>
   </app-i3-window>
 </div>
