--- a/src/app/components/obsidian/obsidian.html
+++ b/src/app/components/obsidian/obsidian.html
@@ -3,16 +3,16 @@
     <section class="section">
       <h2 class="section-title"># projects</h2>
       <div class="activity-list">
-        @for (item of activityData['projects']; track item.name) {
+        @for (item of (projects$ | async) ?? []; track item.name) {
           <app-activity-info [activity]="item"></app-activity-info>
         }
       </div>
     </section>
 
     <section class="section">
-      <h2 class="section-title"># activity</h2>
+      <h2 class="section-title"># events</h2>
       <div class="activity-list">
-        @for (item of activityData['activity']; track item.name) {
+        @for (item of (events$ | async) ?? []; track item.name) {
           <app-activity-info [activity]="item"></app-activity-info>
         }
       </div>
@@ -22,9 +22,9 @@
   <div class="right-column">
     <section class="section">
       <h2 class="section-title"># hard-skills</h2>
-      <app-expand-content [maxHeight]='"225px"'>
+      <app-expand-content maxHeight="225px">
         <div class="activity-list">
-          <app-skills-tree [treeData]="skills"></app-skills-tree>
+          <app-skills-tree [treeData]="(hardSkills$ | async) ?? []"></app-skills-tree>
         </div>
       </app-expand-content>
     </section>
@@ -32,7 +32,7 @@
     <section class="section">
       <h2 class="section-title"># education</h2>
       <div class="activity-list">
-        @for (item of activityData['education']; track item.name) {
+        @for (item of (education$ | async) ?? []; track item.name) {
           <app-activity-info [activity]="item"></app-activity-info>
         }
       </div>
