--- a/src/app/components/expand-content/expand-content.html
+++ b/src/app/components/expand-content/expand-content.html
@@ -1,5 +1,7 @@
 <div class="expandable-container-wrapper">
-  <div class="gradient-overlay" [class.hidden]="isExpanded"></div>
+  @if (shouldShowButton) {
+    <div class="gradient-overlay" [class.hidden]="isExpanded"></div>
+  }
   
   <div class="expandable-container" 
        #contentWrapper
@@ -7,9 +9,11 @@
     <ng-content></ng-content>
   </div>
 
-  <button class="expand-button" (click)="toggleExpand()">
-    <svg class="arrow-icon" [class.expanded]="isExpanded" viewBox="0 0 24 24" width="24" height="24">
-      <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z" fill="currentColor"/>
-    </svg>
-  </button>
+  @if (shouldShowButton) {
+    <button class="expand-button" (click)="toggleExpand()">
+      <svg class="arrow-icon" [class.expanded]="isExpanded" viewBox="0 0 24 24" width="24" height="24">
+        <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z" fill="currentColor"/>
+      </svg>
+    </button>
+  }
 </div>
